Changed Bindings to Match Comics model.

--- a/Comic-Collector/Views/MainPage.xaml
+++ b/Comic-Collector/Views/MainPage.xaml
@@ -28,12 +28,12 @@
                         <ViewCell>
                             <StackLayout>
                                 <StackLayout Orientation="Horizontal">
-                                    <Label Text="{Binding ComicName}" />
-                                    <Label Text="{Binding ComicNum}" />
+                                    <Label Text="{Binding Name}" />
+                                    <Label Text="{Binding Number}" />
                                 </StackLayout>
                                 <StackLayout Orientation="Horizontal">
                                     <Label Text="{Binding Publisher}"/>
-                                    <Label Text="{Binding PubYear}" />
+                                    <Label Text="{Binding PubDate}" />
                                 </StackLayout>
                             </StackLayout>
                         </ViewCell>
